# felvi_games

./: .env.template  README.md  alembic.ini  app.py  feladatok.json  pyproject.toml
data/: swe.md
docs/: swe.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  aacfdfc25f9b_add_feladat_versioning.py  c491db828a78_add_user_id_pk.py
src/felvi_games/: achievements.py  ai.py  app.py  cli.py  config.py  db.py  medal_assets.py  models.py  pdf_parser.py  progress_check.py  report.py  review.py  scraper.py
tests/: conftest.py  test_cli_review.py  test_db.py  test_pdf_parser.py
